refactor(fridge-search): OpenSearch + Querydsl fallback 구조 통합 및 aiFilter 적용